# PracticaVision_4.1

./: .gitignore  readme.md
Fase_1A_Segmentacion/: Fase1A_Segmentación.ipynb  app.py  config.toml
Fase_1A_Segmentacion/Proyecto_Cartas/entrenamiento_v1/: args.yaml  results.csv
Fase_1A_Segmentacion/Proyecto_Cartas/entrenamiento_v2_medium/: args.yaml  results.csv
Fase_1A_Segmentacion/Proyecto_Cartas/entrenamiento_v3_robusto/: args.yaml  results.csv
Fase_1A_Segmentacion/datasets/cartas/: README.roboflow.txt  data.yaml
Fase_1A_Segmentacion/datasets/cartas/test/labels/: IMG_2163_MOV-0013_jpg.rf.e61b76e86e27cf70493b749bca392d71.txt  IMG_2164_MOV-0003_jpg.rf.a5efb7641aea823a2edc2855cd64bdd4.txt  IMG_2165_MOV-0006_jpg.rf.8b97761a215aa27331d62bd23ae95f1c.txt  IMG_2166_MOV-0007_jpg.rf.0344384654dbdbd414c03d1fe7e61d2f.txt  IMG_2167_MOV-0001_jpg.rf.0f9a74b1062a3ce9569810115bd79932.txt  IMG_2167_MOV-0021_jpg.rf.b18b8636096d26af7d0ff2c027a61208.txt  IMG_2167_MOV-0022_jpg.rf.0f7042ffca0fc8efd058f0150df22f4c.txt  IMG_2168_MOV-0013_jpg.rf.9c09435dabf13fb2dcb4c8548a40a545.txt  IMG_2168_MOV-0016_jpg.rf.5e00e14988f1a8649dadcf9985c9b634.txt  IMG_2168_MOV-0021_jpg.rf.e0a72d1c17c6d76647a1db6ce9bbf032.txt  (+3 more)
Fase_1A_Segmentacion/datasets/cartas/train/: labels.cache
Fase_1A_Segmentacion/datasets/cartas/valid/: labels.cache
Fase_1A_Segmentacion/runs/segment/entrenamiento_final/: args.yaml  results.csv
Fase_1B_SuperRes/: Benchmark_Final.ipynb  comparativa_sr_yolo.py  setup.ipynb
Fase_1C_PPi/: CMakeLists.txt  desgloce_latencia.py  generar_bench.py  main.cpp
(+138 files in other folders)
